--- a/pages/bio.html
+++ b/pages/bio.html
@@ -18,11 +18,12 @@
     <header class="main-header">
         <nav class="main-nav">
             <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="bio.html" class="active">BIO</a></li
-                <li><a href="experiencia.html">EXPERIENCIA</a></li>
-                <li><a href="servicios.html">SERVICIOS</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="/index.html">INICIO</a></li>
+                <li><a href="/pages/bio.html">BIO</a></li>
+                <li><a href="/pages/experiencia.html">EXPERIENCIA</a></li>
+                <li><a href="/pages/servicios.html">SERVICIOS</a></li>
+                <li><a href="/pages/detective.html">OSINT TOOLS</a></li>
+                <li><a href="/pages/contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -43,8 +44,8 @@
                 </div>
                 
                 <div class="bio-intro">
-                    <h1 class="title-gradient">Innovación Tecnológica <span class="break-line">+ Visión Empresarial</span></h1>
-                    <p class="lead-text">Profesional apasionado por la tecnología, inteligencia artificial y administración de empresas, con experiencia en desarrollo de software, gestión de negocios y automatización de procesos.</p>
+                    <h1 class="title-gradient">Inteligencia Artificial<span class="break-line">+ Visión Empresarial</span></h1>
+                    <p class="lead-text">Profesional apasionado por la Inovación tecnología, inteligencia artificial y administración de empresas, con experiencia en desarrollo de software, gestión de negocios y automatización de procesos.</p>
                     <!-- Botón LinkedIn nuevo -->
                     <a href="https://www.linkedin.com/in/mauricioerazoarango/" 
                         class="linkedin-btn" 
@@ -63,7 +64,7 @@
                         <div class="degree-icon">🎓</div>
                         <h3>Administrador de Empresas</h3>
                         <p>Especializado en transformación digital</p>
-                        <div class="degree-meta">2024</div>
+                        <div class="degree-meta">2014</div>
                     </article>
                     
                     <article class="degree-card">
