--- a/pages/bio.html
+++ b/pages/bio.html
@@ -3,7 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-    <title>Mauricio Erazo | Bio</title>
+    <title>Mauricio Erazo | Servicios Profesionales: Consultor IA, Optimización Logística y Ciberseguridad</title>
+     <!-- ============= SCHEMA MARKUP BIOGRAFÍA ============= -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "Mauricio Erazo",
+            "url": "https://tudominio.com/pages/bio.html",
+            "image": "https://tudominio.com/img/bio-profesional.webp",
+            "description": "Profesional en tecnología y administración empresarial especializado en IA y transformación digital",
+            "jobTitle": "Tech & Business Innovator",
+            "hasOccupation": {
+                "@type": "Occupation",
+                "name": "Consultor en Inteligencia Artificial",
+                "skills": [
+                    "Desarrollo de software",
+                    "Automatización de procesos",
+                    "Gestión de negocios digitales",
+                    "Visión por computadora"
+                ]
+            },
+            "alumniOf": [
+                {
+                    "@type": "EducationalOrganization",
+                    "name": "Universidad San Martin",
+                    "description": "Administrador de Empresas - Especializado en transformación digital",
+                    "startDate": "2010",
+                    "endDate": "2014"
+                },
+                {
+                    "@type": "EducationalOrganization",
+                    "name": "Servicio Nacional de Aprendizaje SENA",
+                    "description": "Técnico en Programación Cloud - Soluciones escalables en la nube",
+                    "startDate": "2022",
+                    "endDate": "2024"
+                }
+            ],
+            "knowsAbout": [
+                "Inteligencia Artificial",
+                "Optimización Logística",
+                "Ciberseguridad",
+                "Desarrollo Cloud",
+                "Gestión Empresarial Digital"
+            ],
+            "sameAs": "https://www.linkedin.com/in/mauricioerazoarango/"
+        }
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
